syntax = "proto3";

package proto;

option go_package = "./";


service MasterService {
  rpc RegisterFile(RegisterFileRequest) returns (RegisterFileResponse);
  rpc GetFileMetadata(GetFileMetadataRequest) returns (GetFileMetadataResponse);
   rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
   rpc AppendFile(AppendFileRequest) returns   (AppendFileResponse);

}



message RegisterFileRequest {
  string file_name = 1;
  string file_format = 2;
  int64 total_size = 3;
  int32 chunk_count = 4;
  repeated int64 chunk_sizes = 5;
  repeated string chunk_hashes = 6;
  int64 timestamp = 7;
  string client_id = 8;
  int32 priority = 9;
  int32 redundancy_level = 10;
  bool compression_used = 11;
}

message RegisterFileResponse {
  string file_id = 1;
  string leader_server = 2; 
  map<int32, ChunkServers> chunk_assignments = 3; 
  bool success = 4; 
  string message = 5;
}

message ChunkServers {
  string chunk_hash = 1;
  int32 chunk_index = 2;
  string leader = 3;
  repeated string replicas = 4;
}

message ReplicaServers {
  string chunk_hash = 1;
  int32 chunk_index = 2;
  repeated string replicas = 3;
}

message GetFileMetadataRequest {
  string file_name = 1;
  string client_id = 2;
}

message GetFileMetadataResponse {
  string file_format = 1;
  int64 total_size = 2;
  int32 chunk_count = 3;
  repeated string chunk_hashes = 4;
  map<int32, ChunkServers> chunk_assignments = 5;
  string client_id = 6;
  bool success = 7;
  string message = 8;
}


message DeleteFileRequest{
  string file_name = 1;
  string client_id = 2;
}

message DeleteFileResponse{
  bool success = 1;
  string client_id = 2;
  string message = 3;
}

message AppendFileRequest {
  string file_name = 1;
  int64 total_size = 2;
  int32 chunk_count = 3;
  repeated int64 chunk_sizes = 4;
  repeated string chunk_hashes = 5;
  string client_id = 6; 
}

message AppendFileResponse{
  string file_id = 1;
  map<int32, string> chunk_assignments = 2;
  bool success = 3;
  string message = 4;
}
